---
source: lexer/tests/lexer.rs
description: "\nput /api {}\npatch /api {}\ndelete /api {}\n"
expression: "lexer.into_iter().collect::<Vec<Token>>()"
---
[
    Put("put") at Location { line: 1, col: 0 },
    Pathname("/api") at Location { line: 1, col: 4 },
    LBracket("{") at Location { line: 1, col: 9 },
    RBracket("}") at Location { line: 1, col: 10 },
    Patch("patch") at Location { line: 2, col: 0 },
    Pathname("/api") at Location { line: 2, col: 6 },
    LBracket("{") at Location { line: 2, col: 11 },
    RBracket("}") at Location { line: 2, col: 12 },
    Delete("delete") at Location { line: 3, col: 0 },
    Pathname("/api") at Location { line: 3, col: 7 },
    LBracket("{") at Location { line: 3, col: 12 },
    RBracket("}") at Location { line: 3, col: 13 },
]
